[package]
name = "rprox"
version = "0.1.0"
license-file = "LICENSE"
readme = "README.md"
description = "A basic Rust reverse proxy"
documentation = "https://docs.rs/rprox"
repository = "https://github.com/nyxkrage/rprox"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
caps = "0.5.3"
http = "0.2.6"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
tokio = { version = "1", features = ["full"] }
